fixed the spacing and styleing of these stats

--- a/app/assets/styles/core/_rtl.scss
+++ b/app/assets/styles/core/_rtl.scss
@@ -326,14 +326,28 @@
 .category-stats {
     box-shadow: inset 0 -1px 0 0 $tertiary-color;
     padding-top: $global-spacing;
-    &:last-child {
-      box-shadow: none;
-    }
+    width: 100%;
     @include media(medium-up) {
       padding-top: 0;
-      padding-right: $global-spacing * 4;
-      @include col(4/12);
       box-shadow: inset -1px 0 0 $tertiary-color;
+    }
+    .category-stats__item {
+      float: right;
+      border-left: 1px solid $tertiary-color;
+      border-right: 0;
+      &:last-of-type {
+        border-left: 0;
+        padding-left: 0;
+        padding-right: 1.4em;
+      }
+      @include media(medium-down) {
+        &:nth-of-type(2) {
+          border-left: 0;
+        }
+      }
+    }
+    &:last-child {
+      box-shadow: none;
     }
   }
 
